--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                 <li>Cover available online from $100,000 - $5 million</li>
                 <li>Optional add-on insurance for more comprehensive cover</li>
             </ul>
-            <p><a href="#quote-form-mobile" class="banner-intro-cta">Build your cover</a></p>
+            <p><a href="#rewards" class="banner-intro-cta">Build your cover</a></p>
         </section>
         <section class="rewards">
             <article class="rewards-icon">
                 <img src="https://i.imgur.com/0KiLi81.png" alt="Offer icon">
             </article>
-            <article class="rewards-copy">
+            <article class="rewards-copy" id="rewards">
                 <h2>Get rewarded with 15% off</h2>
                 <p>Receive discounts of up to 15% on premiums to the life of your policy when you combine a Life, Critical Illness and/or Total and Permanent Disability Insurance.</p>
             </article>
