--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <p>Financial protection for your loved ones if you die in an accident or from an illness.</p>
             <ul>
                 <li>Apply online if you're between 19-62 (age next birthday)</li>
-                <li>Apply for cover online from $100,000 &ndash; $5 million</li>
-                <li>Optional add-on insurance for more comprehensive cover&mdash;Total and Permanent Disability and Critical Illness Insurance</li>
+                <li>Cover available online from $100,000 &ndash; $5 million</li>
+                <li>Optional add-on insurance for increased protection</li>
             </ul>
             <p><a href="#rewards" class="banner-intro-cta">Build your cover</a></p>
         </section>
