--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <section class="header-awards">
             <img src="https://www.tal.com.au//-/media/tal/images/awards/canstar/canstar-2022-2024-outstanding-value-direct-life-insurance-300pxh.webp" alt="Canstar Outstanding Value 2022-2024" id="canstar">
             <img src="https://coverbuilder.tal.com.au/assets/Finder-Award-Winner-LIFE-2024.webp" alt="Finder Winner Life Insurance 2024" id="finder">
-            <img src="https://www.tal.com.au/-/media/TAL/Images/Awards/finder/Finder-Award-Winner-IP-2023-2024.webp" alt="Finder Winner Income Protection 2023-2024" id="finder">
+            <!--img src="https://www.tal.com.au/-/media/TAL/Images/Awards/finder/Finder-Award-Winner-IP-2023-2024.webp" alt="Finder Winner Income Protection 2023-2024" id="finder"-->
             <img src="https://www.tal.com.au/-/media/TAL/Images/Awards/money-magazine/2024-bob-best-value-direct-life-tpd-white-collar" alt="Money Magazine Winner Best of the Best Life and TPD Insurance 2024" id="MoneyMagazine"> 
-            <img src="https://www.tal.com.au/-/media/TAL/Images/Awards/money-magazine/2024-bob-best-value-direct-IPP-white-collar.ashx" alt="Money Magazine Winner Best of the Best Income Protection Insurance 2024" id="MoneyMagazine">
+            <img src="https://www.tal.com.au//-/media/tal/images/awards/money-magazine-direct-life-insurance-award-2023-150px.png" alt="Money Magazine Winner Best of the Best Life Insurance 2023">
+            <!--img src="https://www.tal.com.au/-/media/TAL/Images/Awards/money-magazine/2024-bob-best-value-direct-IPP-white-collar.ashx" alt="Money Magazine Winner Best of the Best Income Protection Insurance 2024" id="MoneyMagazine"-->
         </section>
         <section class="header-buttons">
             <section class="header-phone">
@@ -36,24 +37,25 @@
     <main class="banner">
         <section class="banner-intro">
             <h1>Tailor an award-winning cover to suit you</h1>
-            <p>Financial protection for your loved ones if you die in an accident or from an illness.</p>
+            <p>Help provide for your loved ones with one of Australia's leading life insurers.</p>
             <ul>
-                <li>Apply online if you're between 19-62 (age next birthday)</li>
-                <li>Cover available online from $100,000 &ndash; $5 million</li>
-                <li>Optional add-on insurance for increased protection</li>
+                <li><span>Lump sum payment if you die or are diagnosed with a terminal illness.</span></li>
+                <li><span>Apply online if you're between 19-74 (age next birthday)</span></li>
+                <li><span>Cover available online from $100,000 &ndash; $5 million</span></li>
+                <li><span>Optional add-on insurance for more comprehensive cover</span></li>
             </ul>
             <p><a href="#rewards" class="banner-intro-cta">Build your cover</a></p>
         </section>
-        <section class="rewards">
+        <section class="rewards" id="rewards">
             <article class="rewards-icon">
-                <img src="https://i.imgur.com/0KiLi81.png" alt="Offer icon">
+                <img src="https://www.tal.com.au/-/media/tal/images/icons/green/tal0046-iconography_green_livingbenefits.png?h=50&w=47&hash=D75C6A6C4878141E1A91BD88FDAF0262" alt="Offer icon">
             </article>
-            <article class="rewards-copy" id="rewards">
-                <h2>Get rewarded with 15% off</h2>
-                <p>Receive discounts of up to 15% on premiums to the life of your policy when you combine a Life, Critical Illness and/or Total and Permanent Disability Insurance.</p>
+            <article class="rewards-copy">
+                <h2>Get rewarded with up to 15% off</h2>
+                <p>With TAL Health Sense, you can get up to 15% off your premiums when you combine a Life, Critical Illness and/or Total and Permanent Disability Insurance.<br> <a href="https://www.tal.com.au/health-sense" alt="TAL Health Sense terms">Read eligibility criteria and conditions</a></p>
             </article>
         </section>
-        <section class="quote-form" id="quote-form-mobile">
+        <!--section class="quote-form" id="quote-form-mobile">
             <article class="quote-form-intro">
                 <h1>Your Life Insurance quote</h1>
                 <img src="https://seal.digicert.com/seals/cascade/?tag=HHtjsoD0&referer=coverbuilder.tal.com.au&format=png&lang=en" alt="DigiCert logo" id="digicert-logo">
@@ -77,6 +79,9 @@
                 <li>Download the <a href="#">Product Disclosure Statement</a></li>
                 <li>Download <a href="#">Life Insurance key fact sheet</a></li>
             </ul>
+        </section-->
+        <section class="quote-form-img">
+            <img src="https://i.imgur.com/FzxLvOz.jpeg" alt="Quote form">
         </section>
         <section class="about-tal">
             <section class="about-tal-faqs">
@@ -127,7 +132,7 @@
                 </section>
             </section>
         </section-->
-        <section class="quote-form" id="quote-form-desktop">
+        <!--section class="quote-form" id="quote-form-desktop">
             <article class="quote-form-intro">
                 <h1>Your Life Insurance quote</h1>
                 <img src="https://seal.digicert.com/seals/cascade/?tag=HHtjsoD0&referer=coverbuilder.tal.com.au&format=png&lang=en" alt="DigiCert logo" id="digicert-logo">
@@ -151,7 +156,7 @@
                 <li>Download the <a href="#">Product Disclosure Statement</a></li>
                 <li>Download <a href="#">Life Insurance key fact sheet</a></li>
             </ul>
-        </section>
+        </section-->
         
         <footer>
             <section class="footer-nav-contents" id="footer-nav-contents-col-1">
