--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </article>
             <article class="rewards-copy">
                 <h2>Get rewarded with up to 15% off</h2>
-                <p>With TAL Health Sense you get an upfront lifetime discount of up to 15% off your premiums on Life, Critical Illness and/or Total & Permanent Disability (TPD) insurance. <sup>2</sup><br> <a href="https://www.tal.com.au/health-sense" alt="TAL Health Sense terms">Read eligibility criteria and conditions</a></p>
+                <p>With TAL Health Sense you get an upfront lifetime discount of up to 15% off your premiums on Life, Critical Illness and/or Total & Permanent Disability (TPD) insurance.<sup>1</sup><br> <a href="https://www.tal.com.au/health-sense" alt="TAL Health Sense terms">Read eligibility criteria and conditions</a></p>
             </article>
         </section>
         <!--section class="quote-form" id="quote-form-mobile">
@@ -119,7 +119,7 @@
                 </section>
                 <section class="about-tal-why-info-copy">
                     <img src="https://www.tal.com.au/-/media/tal/images/icons/product/why-choose-tal/tpd-why-tal-customers.png?h=80&w=120&hash=135AF670E8EA3DB69897643A47D005FD031E2D55&hash=135AF670E8EA3DB69897643A47D005FD031E2D55" alt="trust icon">
-                    <p>Trusted by over 5 million customers<sup>1</sup></p>
+                    <p>Trusted by over 5 million customers<sup>2</sup></p>
                 </section>
                 <section class="about-tal-why-info-copy">
                     <img src="https://www.tal.com.au/-/media/tal/images/icons/product/why-choose-tal/tpd-why-tal-claims.png?h=80&w=120&hash=B6DB0C480ABBB25DC30598AE5160219E593D39EB&hash=B6DB0C480ABBB25DC30598AE5160219E593D39EB" alt="claims icon">
@@ -169,8 +169,8 @@
                     <a href="https://www.tal.com.au/about-us/documents-and-forms">Key Fact Sheets</a>
                 </article>
                 <h3>Things you should know</h3>
-                <sup>1</sup><p>Based on customer covers in force across Group, Retail and Direct and there may be duplicate lives insured.</p>
-                <sup>2</sup><p>TAL Health Sense offers you up to 15% off your Accelerated Protection Life, Critical Illness and TPD Insurance premiums if your BMI is between 19.0 and 28.0 (inclusive). Simply confirm your BMI (by entering your height and weight) when you're applying for insurance and your discount will be calculated and applied automatically.</p>
+                <p><sup>1</sup> TAL Health Sense offers you up to 15% off your Accelerated Protection Life, Critical Illness and TPD Insurance premiums if your BMI is between 19.0 and 28.0 (inclusive). Simply confirm your BMI (by entering your height and weight) when you're applying for insurance and your discount will be calculated and applied automatically.</p>
+                <p><sup>2</sup> Based on customer covers in force across Group, Retail and Direct and there may be duplicate lives insured.</p>
                 <p>The information provided on this website is general advice only and does not take into account your individual needs, objectives or financial situation. Before you decide to buy or to continue to hold an insurance product, you must read the relevant combined Product Disclosure Statement (PDS) and Financial Services Guide (FSG). The PDS/FSG contains important information which will help you understand the product including what's covered and what's not covered and to decide whether it is appropriate for you. The Target Market Determination (TMD) for the product is also available. Life insurance issued by TAL Life Limited ABN 70 050 109 450 AFSL 237848. Promoted and distributed by TAL Direct Pty Limited (of Level 16, 363 George Street, Sydney NSW 2000) ABN 39 084 666 017 AFSL 243260.</p>
                 <p>TAL Direct and TAL Life are part of the TAL Dai-ichi Life Australia Pty Limited ABN 97 150 070 483 group of companies.</p>
             </section>
