--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main class="banner">
         <section class="banner-intro">
             <h1>Tailor an award-winning cover to suit you</h1>
-            <p>Your loved ones receive a lump sum payment if you pass away or are diagnosed with a terminal illness.</p>
+            <p>Protect your family's future with a lump sum payment if you pass away or are diagnosed with a terminal illness.</p>
             <ul>
                 <li><span>Apply online if you're between 19-74 (age next birthday)</span></li>
                 <li><span>Get an online quote for cover from $100,000 &ndash; $5 million</span></li>
