--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </article>
             <article class="rewards-copy">
                 <h2>Get rewarded with up to 15% off</h2>
-                <p>With TAL Health Sense you get an upfront lifetime discount of up to 15% off your premiums on Life, Critical Illness and/or Total & Permanent Disability (TPD) insurance.<sup>1</sup><br> <a href="https://www.tal.com.au/health-sense" alt="TAL Health Sense terms">Read eligibility criteria and conditions</a></p>
+                <p>With TAL Health Sense you could get an upfront lifetime discount of up to 15% off your premiums on Life, Critical Illness and/or Total & Permanent Disability (TPD) insurance.<sup><a href="#health-sense">1</a></sup><br> <a href="https://www.tal.com.au/health-sense" alt="TAL Health Sense terms">Read eligibility criteria and conditions</a></p>
             </article>
         </section>
         <!--section class="quote-form" id="quote-form-mobile">
@@ -119,11 +119,11 @@
                 </section>
                 <section class="about-tal-why-info-copy">
                     <img src="https://www.tal.com.au/-/media/tal/images/icons/product/why-choose-tal/tpd-why-tal-customers.png" alt="trust icon">
-                    <p>Trusted by over 5 million customers<sup>2</sup></p>
+                    <p>Trusted by over 5 million customers<sup><a href="#customers">2</a></sup></p>
                 </section>
                 <section class="about-tal-why-info-copy">
                     <img src="https://www.tal.com.au/-/media/tal/images/icons/product/why-choose-tal/tpd-why-tal-claims.png" alt="claims icon">
-                    <p>Last financial year we paid $4.2 billion in claims to 50,128 customers<sup>3</sup></p>
+                    <p>Last financial year we paid $4.2 billion in claims to 50,128 customers<sup><a href="#claims">3</a></sup></p>
                 </section>
                 <section class="about-tal-why-info-copy">
                     <img src="https://www.tal.com.au/-/media/TAL/Images/Icons/green/TAL_Iconography_Green_TalkToUs" alt="support icon">
@@ -160,20 +160,23 @@
         <footer>
             <section class="footer-nav-contents" id="footer-nav-contents-col-1">
                 <img src="https://www.tal.com.au/-/media/490b2a5a335f432f93776132c98c27e4.ashx" alt="TAL logo" id="footer-logo">
+                <img src="https://seal.digicert.com/seals/cascade/?tag=HHtjsoD0&referer=coverbuilder.tal.com.au&format=png&lang=en" alt="DigiCert logo" id="digicert-logo">
             </section>
             <section class="footer-nav-contents" id="footer-nav-contents-col-2">
                 <article class="footer-links">
-                    <a href="https://www.tal.com.au/privacy-policy">Privacy policy</a>
-                    <a href="https://www.tal.com.au/-/media/tal/files/fsg/financial_services_guide.pdf">Financial Services Guide</a>
                     <a href="https://www.tal.com.au/about-us/documents-and-forms">Product Disclosure Statement</a>
+                    <a href="https://www.tal.com.au/-/media/tal/files/fsg/financial_services_guide.pdf">Financial Services Guide</a>
                     <a href="https://www.tal.com.au/about-us/documents-and-forms">Key Fact Sheets</a>
+                    <a href="https://www.tal.com.au/about-us/documents-and-forms">Target Market Determination</a>
+                    <a href="https://www.tal.com.au/privacy-policy">Privacy Policy</a>
+                    <a href="https://www.tal.com.au/security">Security</a>
                 </article>
                 <h3>Things you should know</h3>
-                <p><strong>1</strong> TAL Health Sense offers you up to 15% off your Accelerated Protection Life, Critical Illness and TPD Insurance premiums if your BMI is between 19.0 and 28.0 (inclusive). Simply confirm your BMI (by entering your height and weight) when you're applying for insurance and your discount will be calculated and applied automatically.</p>
-                <p><strong>2</strong> Based on customer covers in force across Group, Retail and Direct and there may be duplicate lives insured.</p>
-                <p><strong>3</strong> Claims statistics based on total claims paid under TAL Life Limited and TAL Life Insurance Services Limited insurance products (including funeral insurance) between 1 April 2023 and 31 March 2024.</p>
+                <p id="health-sense"><strong>1</strong> A maximum 15% Health Sense discount applies to non-smokers meeting the BMI criteria that hold 4 benefit types (Life; Critical Illness; TPD and Income Protection (IP)) and meeting minimum sum insured amounts for all benefit types. Lower discounts will apply for other benefit combinations and smokers. More information is available on request from TAL.<br>Assumes the policy owner makes no changes to the policy, benefit types or amounts, and that the policy or any benefits have not ended (e.g after payment of a claim or the expiry of a benefit).<br>For customers with loadings, the Health Sense discounts apply to premiums including loadings (except loadings applied on a per-mille basis) and apply to Life Insurance, TPD Insurance and Critical Illness Insurance benefits only. Where a per-mille loading has been applied, the discount will not apply on additional premium resulting from the per-mille loading (an example of a per mille loading is $5.00 extra premium per $1,000 sum insured). Health Sense discounts only apply to Life Insurance, TPD Insurance and Critical Illness Insurance benefits only. Please contact TAL for a pre-assessment or if you wish to check the loading basis (for Health Sense and Health Sense Plus eligibility) for any client.</p>
+                <p id="customers"><strong>2</strong> Based on customer covers in force across Group, Retail and Direct and there may be duplicate lives insured.</p>
+                <p id="claims"><strong>3</strong> Claims statistics based on total claims paid under TAL Life Limited and TAL Life Insurance Services Limited insurance products (including funeral insurance) between 1 April 2023 and 31 March 2024.</p>
                 <br>
-                <p>The information provided on this website is general advice only and does not take into account your individual needs, objectives or financial situation. Before you decide to buy or to continue to hold an insurance product, you must read the relevant combined Product Disclosure Statement (PDS) and Financial Services Guide (FSG). The PDS/FSG contains important information which will help you understand the product including what's covered and what's not covered and to decide whether it is appropriate for you. The Target Market Determination (TMD) for the product is also available. Life insurance issued by TAL Life Limited ABN 70 050 109 450 AFSL 237848. Promoted and distributed by TAL Direct Pty Limited (of Level 16, 363 George Street, Sydney NSW 2000) ABN 39 084 666 017 AFSL 243260.</p>
+                <p>The information provided on this website is general advice only and does not take into account your individual needs, objectives or financial situation. Before you decide to buy or to continue to hold an insurance product, you must read the relevant Product Disclosure Statement (PDS) and Financial Services Guide (FSG). The PDS and FSG contains important information which will help you understand the product including what's covered and what's not covered and to decide whether it is appropriate for you. The Target Market Determination (TMD) for the product is also available. Life insurance issued by TAL Life Limited ABN 70 050 109 450 AFSL 237848. Promoted and distributed by TAL Direct Pty Limited (of Level 16, 363 George Street, Sydney NSW 2000) ABN 39 084 666 017 AFSL 243260.</p>
                 <p>TAL Direct and TAL Life are part of the TAL Dai-ichi Life Australia Pty Limited ABN 97 150 070 483 group of companies.</p>
             </section>
         </footer>
